--- a/blocks/main/vasyuki/__slider/vasyuki__slider.css
+++ b/blocks/main/vasyuki/__slider/vasyuki__slider.css
@@ -1,21 +1,17 @@
 .vasyuki__slider {
     margin-top: 148px;
-    display: flex;
-    overflow: hidden; 
+    display: inline-flex;
     width: 100%;
-    transition: transform 0.5s ease;
 }
 
 @media (max-width: 768px) {
-    .vasyuki__slider {
-        height: 300px;
-        scroll-behavior: smooth;
-        overflow-x: auto;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-    }
-
     .vasyuki__slider::-webkit-scrollbar {
+        display: none;
+    } 
+    .slide-1,
+    .slide-2,
+    .slide-4,
+    .slide-5 {
         display: none;
     }
 }
